添加法线、切线、漫反射、高光，但是插值问题引起法线不对
添加法线、切线、漫反射、高光，但是插值问题引起法线不对，后面再修复

--- a/SoftRenderer/SoftRenderer/SoftRenderer.csproj
+++ b/SoftRenderer/SoftRenderer/SoftRenderer.csproj
@@ -96,6 +96,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Debug\Images\GitHubIcon.PNG" />
     <Content Include="bin\Debug\Images\heightMap1.jpg" />
     <Content Include="bin\Debug\Images\tex.jpg" />
     <Content Include="bin\Debug\Images\icon.PNG" />
