--- a/SoftRenderer/SoftRenderer/SoftRenderer.csproj
+++ b/SoftRenderer/SoftRenderer/SoftRenderer.csproj
@@ -100,6 +100,7 @@
     <Content Include="bin\Debug\Images\heightMap1.jpg" />
     <Content Include="bin\Debug\Images\tex.jpg" />
     <Content Include="bin\Debug\Images\icon.PNG" />
+    <Content Include="bin\Debug\Images\texture.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RendererCommon\SoftRendererCommon.csproj">
