--- a/SoftRenderer/SoftRendererShader/SoftRendererShader.csproj
+++ b/SoftRenderer/SoftRendererShader/SoftRendererShader.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BalloonCatShader.cs" />
     <Compile Include="Shader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
