测试添加多SV_Target输出的功能。
尝试输出多个SV_Target。
将法线输出到SV_Target1中。
并在另一个PictureBox中显示。

--- a/SoftRenderer/RendererShader/RendererShader.csproj
+++ b/SoftRenderer/RendererShader/RendererShader.csproj
@@ -49,6 +49,7 @@
     <ProjectReference Include="..\RendererCoreCommon\RendererCoreCommon.csproj">
       <Project>{6c875b2c-dbf3-4b33-a28b-00a90dbf970c}</Project>
       <Name>RendererCoreCommon</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
