--- a/SoftRenderer/RendererCoreCommon/RendererCoreCommon.csproj
+++ b/SoftRenderer/RendererCoreCommon/RendererCoreCommon.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderer\Common\Attributes\Attributes.cs" />
     <Compile Include="Renderer\Common\Mathes\Mathes.cs" />
+    <Compile Include="Renderer\Common\Shader\Enums.cs" />
     <Compile Include="Renderer\Common\Shader\Texture.cs" />
     <Compile Include="Renderer\Common\Shader\ShaderBase.cs" />
     <Compile Include="Renderer\Common\Shader\ShaderData.cs" />
