--- a/SoftRenderer/RendererCore/RendererCore.csproj
+++ b/SoftRenderer/RendererCore/RendererCore.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Renderer\Utils\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\RendererCoreCommon\RendererCoreCommon.csproj">
+    <ProjectReference Include="..\RendererCoreCommon\RendererCoreCommon.csproj">
       <Project>{6c875b2c-dbf3-4b33-a28b-00a90dbf970c}</Project>
       <Name>RendererCoreCommon</Name>
     </ProjectReference>
