--- a/SoftRenderer/RendererShader/RendererShader.csproj
+++ b/SoftRenderer/RendererShader/RendererShader.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BalloonCatShader.cs" />
     <Compile Include="Shader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SphereStencilOutlineShader.cs" />
     <Compile Include="SphereShader.cs" />
   </ItemGroup>
   <ItemGroup>
