--- a/SoftRenderer/App/App.csproj
+++ b/SoftRenderer/App/App.csproj
@@ -90,6 +90,7 @@
     <Content Include="bin\Debug\Images\balloonstupidcat_sg.png" />
     <Content Include="bin\Debug\Images\GitHubIcon.PNG" />
     <Content Include="bin\Debug\Images\heightMap1.jpg" />
+    <Content Include="bin\Debug\Images\mask.png" />
     <Content Include="bin\Debug\Images\my_tex.png" />
     <Content Include="bin\Debug\Images\tex.jpg" />
     <Content Include="bin\Debug\Images\icon.PNG" />
