--- a/SoftRenderer/RendererShader/RendererShader.csproj
+++ b/SoftRenderer/RendererShader/RendererShader.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BalloonCatShader.cs" />
+    <Compile Include="MaskStencilShader.cs" />
     <Compile Include="Shader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SphereStencilOutlineShader.cs" />
